Fixed footer alignment, added delete ticket function & fixed self-deletion in /users

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -335,7 +335,9 @@ button > p {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    
     gap: 16px;
+    padding: 0 24px;
 
     margin-top: -96px;
 }
@@ -490,7 +492,7 @@ button > p {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 16px;
     right: 0;
 
